feat: Add endpoint to get and create user for a room
