# app/app.py
@@ -6,6 +6,7 @@ from flask_restx import Api
 from app.config.cors import CORS_ALLOWED_ORIGIN
 from app.config.mongodb import mongo_config
 from app.routes.quiz import QuizRoutes
+from app.routes.room_user import RoomUserRoutes
 from app.routes.swagger import swagger
 from app.routes.room import RoomRoutes
 from app.routes.topic import TopicRoutes
@@ -21,6 +22,7 @@ def create_app():
     app = Flask(__name__)
     app.register_blueprint(swagger, url_prefix='/swagger')
     api.add_resource(RoomRoutes, '/api/rooms/', '/api/rooms/<string:room_id>')
+    api.add_resource(RoomUserRoutes, '/api/rooms/<string:room_id>/users/')
     api.add_resource(UserRoutes, '/api/users/', '/api/users/<string:user_id>')
     api.add_resource(QuizRoutes, '/api/quizzes/', '/api/quizzes/<string:quiz_id>')
     api.add_resource(TopicRoutes, '/api/topics/', '/api/topics/<string:topic_id>')
